# mcp-onshape

./: .env.example  .gitignore  ARCHITECTURE.md  LOG.md  PLAN.md  README.md  cli.py  compliance_checker.py  constants.py  create_version.py  document_registry.py  export_parts.py  extract_bom.py  onshape_api.py  onshape_documents.yaml  onshape_mcp_server.py  pyproject.toml  revision.py  set_part_metadata.py  sync_variables.py  test_api.py  test_connection.py  test_revision.py
.github/prompts/: setup-onshape.prompt.md
presentation/: onshape-mcp.md
